--- a/src/main/res/layout/activity_pay.xml
+++ b/src/main/res/layout/activity_pay.xml
@@ -25,10 +25,8 @@
             android:textSize="@dimen/whole_titleTextSize"/>
     </LinearLayout>
     <android.support.percent.PercentRelativeLayout
-        android:id="@+id/pay_money"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:background="@color/whole_white">
+        android:layout_height="90dp">
         <ImageView
             android:id="@+id/pay_moneyImage"
             android:layout_width="50dp"
@@ -69,10 +67,8 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/whole_white">
+        android:layout_marginTop="20dp">
         <ImageView
-            android:id="@+id/pay_alipay"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="26dp"
@@ -80,7 +76,6 @@
             android:src="@drawable/login_alipay_logo_nomal"/>
         <TextView
             android:id="@+id/pay_alipaydesc"
-            android:layout_toRightOf="@id/pay_alipay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -88,7 +83,6 @@
             android:text="支付宝支付"
             android:textSize="@dimen/whole_firstTextSize"/>
         <TextView
-            android:layout_toRightOf="@id/pay_alipay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -109,8 +103,7 @@
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/pay_wechat"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:background="@color/whole_white">
+        android:layout_height="90dp">
         <ImageView
             android:id="@+id/pay_alipay"
             android:layout_width="60dp"
@@ -119,7 +112,6 @@
             android:layout_centerVertical="true"
             android:src="@drawable/login_wechat_logo_normal"/>
         <TextView
-            android:id="@+id/pay_alipaydesc"
             android:layout_toRightOf="@id/pay_alipay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -152,7 +144,6 @@
         android:layout_gravity="center_horizontal"
         android:background="@color/whole_text_redColor"
         android:text="确认支付"
-        android:textSize="@dimen/whole_titleTextSize"
-        android:textColor="@color/whole_white"/>
+        android:textSize="@dimen/whole_titleTextSize"/>
 
 </LinearLayout>
