--- a/src/main/res/layout/activity_pay.xml
+++ b/src/main/res/layout/activity_pay.xml
@@ -25,8 +25,10 @@
             android:textSize="@dimen/whole_titleTextSize"/>
     </LinearLayout>
     <android.support.percent.PercentRelativeLayout
+        android:id="@+id/pay_money"
         android:layout_width="match_parent"
-        android:layout_height="90dp">
+        android:layout_height="90dp"
+        android:background="@color/whole_white">
         <ImageView
             android:id="@+id/pay_moneyImage"
             android:layout_width="50dp"
@@ -61,89 +63,25 @@
             android:textSize="20sp"/>
 
     </android.support.percent.PercentRelativeLayout>
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="20dp">
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="26dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/login_alipay_logo_nomal"/>
-        <TextView
-            android:id="@+id/pay_alipaydesc"
+        android:layout_height="wrap_content">
+        <RadioGroup
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="支付宝支付"
-            android:textSize="@dimen/whole_firstTextSize"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="52dp"
-
-            android:text="推荐拥有支付宝账户的用户使用"
-            android:textSize="@dimen/whole_third_detail"/>
-
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/login_wechat_logo_normal"/>
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="30dp"
-                android:layout_alignParentRight="true"/>
-
+                />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RadioGroup>
 
     </android.support.percent.PercentRelativeLayout>
-    <android.support.percent.PercentRelativeLayout
-        android:id="@+id/pay_wechat"
-        android:layout_width="match_parent"
-        android:layout_height="90dp">
-        <ImageView
-            android:id="@+id/pay_alipay"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="26dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/login_wechat_logo_normal"/>
-        <TextView
-            android:layout_toRightOf="@id/pay_alipay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="微信支付"
-            android:textSize="@dimen/whole_firstTextSize"/>
-        <TextView
-            android:layout_toRightOf="@id/pay_alipay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="52dp"
-
-            android:text="推荐拥有微信账户的用户使用"
-            android:textSize="@dimen/whole_third_detail"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
-            android:layout_alignParentRight="true"/>
-    </android.support.percent.PercentRelativeLayout>
-    </RadioGroup>
-    <Button
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/whole_text_redColor"
-        android:text="确认支付"
-        android:textSize="@dimen/whole_titleTextSize"/>
 
 </LinearLayout>
