完成了修改个人资料部分功能

--- a/src/main/res/layout/pay_list_item.xml
+++ b/src/main/res/layout/pay_list_item.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="100dp"
-    android:background="@color/whole_white">
+    android:background="@drawable/bg_border"
+    >
     <ImageView
         android:id="@+id/pay_icon"
         android:layout_width="60dp"
