--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -32,12 +32,13 @@
         <item name="android:layout_weight">1</item>
         <item name="android:dropDownVerticalOffset">40dp</item>
         <item name="android:dropDownWidth">1000dp</item>
+        <item name="android:background">@color/merchant_category_bg_red</item>
     </style>
     <!--定义spinner之间的线的样式-->
     <style name="style_mian_verline">
         <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">25dp</item>
-        <item name="android:background">#dcdcdc</item>
+        <item name="android:background">#ffffff</item>
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
