--- a/src/main/res/drawable/shape_main_topbar_edittext.xml
+++ b/src/main/res/drawable/shape_main_topbar_edittext.xml
@@ -2,9 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
+    <solid android:color="#ffffff" />
+
     <stroke
         android:width="1dip"
-        android:color="#cccccc" />
+        android:color="#A0A0A0" />
 
     <padding
         android:bottom="5dp"
@@ -12,6 +14,6 @@
         android:right="10dp"
         android:top="5dp" />
 
-    <corners android:radius="25dp" />
+    <corners android:radius="20dp" />
 
 </shape>
