--- a/src/main/res/layout/activity_pay.xml
+++ b/src/main/res/layout/activity_pay.xml
@@ -8,34 +8,31 @@
     android:background="@color/whole_bg"
     android:orientation="vertical"
     tools:context="cn.elife.elife.PayActivity">
-    <android.support.percent.PercentRelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/bg_border">
-        <ImageButton
-            android:id="@+id/pay_backbutton"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="60dp">
+        <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
-            android:background="@color/whole_bg"
-            android:scaleType="fitXY"
             android:src="@drawable/actionbar_back_normal"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="支付订单"
-            android:layout_centerInParent="true"
+            android:layout_marginLeft="16dp"
+            android:layout_gravity="center_vertical"
             android:textSize="@dimen/whole_titleTextSize"/>
-    </android.support.percent.PercentRelativeLayout>
+    </LinearLayout>
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/whole_white">
         <ImageView
             android:id="@+id/pay_moneyImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginLeft="20dp"
             android:layout_centerVertical="true"
             android:src="@drawable/money"/>
@@ -95,7 +92,7 @@
     <Button
         android:id="@+id/pay_button"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="确认支付"
         android:textSize="@dimen/whole_titleTextSize"/>
