--- a/src/main/res/layout/cart_item_bottom.xml
+++ b/src/main/res/layout/cart_item_bottom.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="10dp">
 
         <ImageView
+            android:id="@+id/cart_image1"
             android:layout_width="0dp"
             android:layout_height="160dp"
             android:layout_weight="1"
@@ -41,6 +42,7 @@
             android:src="@drawable/cart_test"/>
 
         <ImageView
+            android:id="@+id/cart_image2"
             android:layout_width="0dp"
             android:layout_height="160dp"
             android:layout_marginLeft="10dp"
@@ -58,6 +60,7 @@
         android:layout_marginTop="10dp">
 
         <ImageView
+            android:id="@+id/cart_image3"
             android:layout_width="0dp"
             android:layout_height="160dp"
             android:layout_weight="1"
@@ -65,6 +68,7 @@
             android:src="@drawable/cart_test"/>
 
         <ImageView
+            android:id="@+id/cart_image4"
             android:layout_width="0dp"
             android:layout_height="160dp"
             android:layout_marginLeft="10dp"
