--- a/src/main/res/layout/pay_list_item.xml
+++ b/src/main/res/layout/pay_list_item.xml
@@ -3,8 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="100dp"
-    android:background="@drawable/bg_border"
-    >
+    android:background="@color/whole_white">
     <ImageView
         android:id="@+id/pay_icon"
         android:layout_width="60dp"
