--- a/src/main/res/layout/fragment_meichant.xml
+++ b/src/main/res/layout/fragment_meichant.xml
@@ -58,7 +58,9 @@
             android:id="@+id/fm_lv_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/whole_white">
+            android:background="@color/whole_white"
+            android:divider="@color/whole_divider"
+            android:dividerHeight="0.5dp">
         </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
