--- a/src/main/res/layout/item_fragment_mechant.xml
+++ b/src/main/res/layout/item_fragment_mechant.xml
@@ -93,11 +93,11 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <!--分割线-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/whole_divider"/>
+    <!--&lt;!&ndash;&lt;!&ndash;分割线&ndash;&gt;&ndash;&gt;-->
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0.5dp"-->
+        <!--android:background="@color/whole_text_redColor"/>-->
 
 
 </LinearLayout>
