--- a/src/main/res/layout/activity_snacks.xml
+++ b/src/main/res/layout/activity_snacks.xml
@@ -7,8 +7,6 @@
     android:layout_gravity="center"
     android:orientation="vertical"
     tools:context="cn.elife.elife.SnacksActivity">
-
-    <!--头部搜索-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,37 +14,8 @@
         android:layout_marginRight="16dp"
         android:gravity="center_vertical"
         >
-
-        <ImageView
-            android:id="@+id/as_iv_back"
-            android:layout_width="30dp"
-            android:layout_height="28dp"
-            android:src="@drawable/map_ic_maps_indicator_search_position"/>
-
-        <EditText
-            android:id="@+id/as_et_search"
-            android:layout_width="0dp"
-            android:layout_height="28dp"
-            android:layout_margin="10dp"
-            android:layout_weight="5"
-            android:background="@drawable/shape_main_topbar_edittext"
-            android:drawableLeft="@drawable/sp_search_press"
-            android:drawableRight="@drawable/ic_home_voice_search_holo"
-            android:hint=" 搜索你想找的商品"
-            android:textColorHint="@color/whole_text_blackSecond"
-            android:textSize="@dimen/whole_thirdTextSize"
-            />
-
-        <ImageView
-            android:id="@+id/as_btn_search"
-            android:layout_width="0dp"
-            android:layout_height="25dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:src="@drawable/im_msg_icon"
-            />
-
-    </LinearLayout>
+          <include layout="@layout/search"/>
+        </LinearLayout>
     <!--   分割线
        <TextView
            android:layout_width="match_parent"
