修改添加了大量文件，注意整合公共文件---wgy

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -37,4 +37,7 @@
 
     <!--商家分类背景红色-->
     <color name="merchant_category_bg_red">#ff0000</color>
+
+    <!--选择地区相关-->
+    <color name="province_line_border">#C7C7C7</color>
 </resources>
