--- a/src/main/res/layout/payment_list_item.xml
+++ b/src/main/res/layout/payment_list_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="100dp"
-    android:background="@color/whole_white">
+                                               android:orientation="vertical"
+                                               android:layout_width="match_parent"
+                                               android:layout_height="100dp"
+                                               android:background="@drawable/bg_border"
+    >
     <ImageView
         android:id="@+id/pay_icon"
         android:layout_width="60dp"
