--- a/src/main/res/layout/activity_user_code.xml
+++ b/src/main/res/layout/activity_user_code.xml
@@ -1,13 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.percent.PercentRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".UserBarcodeActivity">
+    <android.support.percent.PercentRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        >
+        <ImageView
+            android:id="@+id/barcode_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/actionbar_back_normal"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="24dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我的二维码名片"
+            android:layout_toRightOf="@id/barcode_back"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:textSize="@dimen/whole_firstTextSize"/>
+    </android.support.percent.PercentRelativeLayout>
+    <ImageView
+        android:id="@+id/barcode_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
+    <TextView
+        android:id="@+id/barcode_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/barcode_image"
+        android:text="1179"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"/>
 
-</RelativeLayout>
+
+</android.support.percent.PercentRelativeLayout>
