--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -5,7 +5,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!--不允许定义局部字体、图片等大小；不允许局部定义元素到屏幕边缘的距离，必须使用全局规定好的；-->
-
+    <!--标题框高度-->
+    <dimen name="title_box">55dp</dimen>
     <!--全局大小-->
     <!--标题信息-->
     <dimen name="whole_titleTextSize">22dp</dimen>
