--- a/src/main/res/layout/center_header.xml
+++ b/src/main/res/layout/center_header.xml
@@ -1,15 +1,233 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_height="55dp"
         android:orientation="horizontal">
-
-
+        <ImageView
+            android:id="@+id/left_box"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center"
+            android:src="@drawable/actionbar_back_normal"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_weight="5"
+            android:text="个人中心"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textSize="@dimen/whole_firstTextSize"/>
+        <ImageView
+            android:id="@+id/center_msg"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:src="@drawable/im_msg_icon"
+            />
     </LinearLayout>
 
+    <!--分割线-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginBottom="0dp"
+        android:background="@color/snacksdiver"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/centeruserhead"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="13dp"
+                android:src="@drawable/touxiang"/>
+
+            <TextView
+                android:id="@+id/centerusername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="宝贝儿微笑"
+                android:layout_below="@+id/centeruserhead"
+                android:layout_alignRight="@+id/centeruserhead"
+                android:layout_alignEnd="@+id/centeruserhead"/>
+
+            <LinearLayout
+                android:id="@+id/mymoney"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginRight="1dp"
+                android:layout_weight="5"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="30dp"
+                    android:gravity="fill_vertical"
+                    android:text="我的积分 :"
+                    android:textSize="15sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="fill_vertical"
+                    android:text="0"
+                    android:textSize="20sp"/>
+            </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+       <!--分割线-->
+     <TextView
+         android:layout_width="match_parent"
+         android:layout_height="1dp"
+         android:layout_marginBottom="0dp"
+         android:background="@color/snacksdiver"
+         />
+       <!--分割线-->
+     <TextView
+         android:layout_width="match_parent"
+         android:layout_height="1dp"
+         android:layout_marginTop="3dp"
+         android:layout_marginBottom="0dp"
+         android:background="@color/snacksdiver"
+         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_weight="10"
+                android:layout_marginLeft="30dp"
+                android:text="我的订单"
+                android:textSize="15sp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_weight="2"
+                android:layout_gravity="right"
+                android:layout_marginRight="0dp"
+                android:text="查看全部订单"
+                android:textColor="@color/whole_text_blackSecond"
+                android:textSize="15sp"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:layout_marginRight="30dp"
+                android:gravity="fill_vertical"
+                android:layout_weight="1"
+                android:src="@drawable/right_arrow_icon"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginLeft="27dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/icon_daifukuan"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="待付款"
+                    android:textSize="15dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginLeft="27dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:src="@drawable/icon_daifahuo"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="待发货"
+                    android:textSize="15dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginLeft="27dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:src="@drawable/icon_daishouhuo"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="待收货"
+                    android:textSize="15dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginLeft="27dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:src="@drawable/icon_pingjia"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="待评价"
+                    android:textSize="15dp"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
