--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -44,4 +44,10 @@
     <color name="province_line_border">#C7C7C7</color>
     <!--零食分割线颜色-->
     <color name="snacksdiver">#c9c9c9</color>
+
+    <!-- 消息流listview下拉刷新的header上的四个颜色值 -->
+    <color name="umeng_comm_lv_header_color1">#33b5e5</color>
+    <color name="umeng_comm_lv_header_color2">#ff4444</color>
+    <color name="umeng_comm_lv_header_color3">#99cc00</color>
+    <color name="umeng_comm_lv_header_color4">#ffbb33</color>
 </resources>
