--- a/src/main/res/layout/detail_goods_body_head.xml
+++ b/src/main/res/layout/detail_goods_body_head.xml
@@ -6,8 +6,8 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/detail_goods_head_vp_showimage"
-        android:layout_width="wrap_content"
-        android:layout_height="144dp">
+        android:layout_width="match_parent"
+        android:layout_height="300dp">
 
     </android.support.v4.view.ViewPager>
 
@@ -16,6 +16,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:paddingTop="5dp"
         >
 
         <TextView
