--- a/src/main/res/layout/popupwindow_addcart.xml
+++ b/src/main/res/layout/popupwindow_addcart.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/province_line_border"
-              android:orientation="vertical">
+              android:layout_height="match_parent"
+              >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/whole_white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,21 +28,24 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我是商品名"
+                android:textColor="@color/whole_text_blackFirst"
+                android:text="胸包潮男款"
                 />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="我是销量"
+                android:textColor="@color/whole_text_blackFirst"
+                android:text="销量：1000"
                 />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:text="我是价钱"
+                android:textColor="@color/whole_btn_pressed"
+                android:text="￥89.0"
                 />
         </LinearLayout>
     </LinearLayout>
@@ -52,8 +59,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="5dp"
+            android:textColor="@color/whole_text_blackFirst"
             android:text="类别"
             />
 
@@ -73,6 +81,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
+                    android:button="@null"
+                    android:textSize="12sp"
+                    android:textColor="@drawable/detail_goods_type_textcolor_selector"
+                    android:background="@drawable/detail_goods_type_selector"
                     android:text="黑色"/>
 
                 <RadioButton
@@ -80,6 +92,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
+                    android:button="@null"
+                    android:textSize="12sp"
+                    android:textColor="@drawable/detail_goods_type_textcolor_selector"
+                    android:background="@drawable/detail_goods_type_selector"
                     android:text="黑色"/>
 
                 <RadioButton
@@ -87,13 +103,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
+                    android:button="@null"
+                    android:textSize="12sp"
+                    android:textColor="@drawable/detail_goods_type_textcolor_selector"
+                    android:background="@drawable/detail_goods_type_selector"
                     android:text="黑色"/>
 
                 <RadioButton
                     android:id="@+id/addcart_goods_type4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:button="@null"
+                    android:textColor="@drawable/detail_goods_type_textcolor_selector"
+                    android:background="@drawable/detail_goods_type_selector"
                     android:layout_marginLeft="8dp"
+                    android:textSize="12sp"
                     android:text="黑色"/>
             </RadioGroup>
         </LinearLayout>
@@ -105,8 +129,10 @@
         android:text="确定"
         android:gravity="center"
         android:background="@color/part_bg_buynow"
+        android:textColor="@color/whole_white"
         android:textSize="20sp"
         android:id="@+id/detail_goods_confirm"
         />
+    </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
