--- a/src/main/res/layout/popupwindow_addcart.xml
+++ b/src/main/res/layout/popupwindow_addcart.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:gravity="bottom"
+              android:background="#ae000000"
               >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_alignParentBottom="true"
         android:background="@color/whole_white">
 
     <LinearLayout
@@ -125,7 +129,7 @@
     
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="44dp"
         android:text="确定"
         android:gravity="center"
         android:background="@color/part_bg_buynow"
@@ -135,4 +139,4 @@
         />
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
