--- a/src/main/res/layout/fragment_home.xml
+++ b/src/main/res/layout/fragment_home.xml
@@ -13,9 +13,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="0dp"
-    android:background="@color/snacksdiver"
+        android:background="@color/snacksdiver"
         />
 
 
@@ -52,18 +50,30 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:text="猜你喜欢"
-                android:textSize="28dp"
-                android:background="#7c64e1"
-                android:gravity="center_vertical|left"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/snacksdiver"
                 />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:text="猜你喜欢"
+                android:textSize="22dp"
+                android:paddingLeft="5dp"
+                android:background="#aecdec"
+                android:gravity="center_vertical"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/snacksdiver"
+                />
+
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
-                android:background="#33ab31"
                 android:id="@+id/home_rv_showAll"></android.support.v7.widget.RecyclerView>
 
         </LinearLayout>
