--- a/src/main/res/drawable/chat_sendbt_textcolor_selector.xml
+++ b/src/main/res/drawable/chat_sendbt_textcolor_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checkable="true" android:color="@color/whole_baseColor"></item>
-    <item android:state_checkable="false" android:color="@color/whole_text_blackFirst"></item>
+    <item android:state_enabled="true" android:color="@color/whole_white"></item>
+    <item android:state_enabled="false" android:color="@color/whole_text_blackFirst"></item>
 </selector>
